test/unit/cxtm/jtm/invalid/association-detached-no-itemtype.jtm
{"version": "1.0",
  "type": "ii:#assoctype",
  "roles": [{"type": "ii:#roletype",
                "player": "ii:#topic"}]
}
